# python_logger_system

./: .gitignore  COMPARISON_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  setup.py
examples/: basic_usage.py
logger_module/: __init__.py
logger_module/core/: __init__.py  log_entry.py  log_level.py  logger.py  logger_builder.py  logger_config.py
logger_module/filters/: __init__.py  base_filter.py  callback_filter.py  level_filter.py  pattern_filter.py
logger_module/formatters/: __init__.py  base_formatter.py  compact_formatter.py  json_formatter.py  text_formatter.py
logger_module/monitoring/: __init__.py  health_checker.py  metrics.py  monitor.py  prometheus_monitor.py
logger_module/routing/: __init__.py  log_router.py  route_builder.py  route_config.py
logger_module/safety/: __init__.py  crash_safe_mixin.py  critical_writer.py  mmap_buffer.py  recovery.py  signal_manager.py  wal_critical_writer.py
logger_module/security/: __init__.py  decryptor.py  encrypted_writer.py  encryption_config.py  key_management.py
logger_module/writers/: __init__.py  batch_writer.py  console_writer.py  file_writer.py  network_writer.py  rotating_file_writer.py
tests/: test_batch_writer.py  test_logger.py  test_monitoring.py  test_network_writer.py  test_routing.py  test_safety.py  test_security.py
